# animeface-2009

./: .gitignore  LICENSE  NOTICE  README.md  build.sh  clean.sh
nvxs/: Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure.ac
nvxs-1.0.2/: ChangeLog  Makefile.am  configure
nvxs-1.0.2/CLAPACK/: ._make.inc.example  CLAPACK-revisions3.1.1.1.info  LAPACK-revisions3.1.0.info  LAPACK-revisions3.1.1.info  make.inc
nvxs-1.0.2/CLAPACK/BLAS/SRC/: caxpy.c  cdotc.c  cgemm.c  cgemv.c  cgeru.c  chbmv.c  chemm.c  cher.c  chpmv.c  chpr.c  csscal.c  cswap.c  ctbmv.c  ctbsv.c  ctpmv.c  ctpsv.c  ctrsv.c  dzasum.c  dznrm2.c  icamax.c  isamax.c  saxpy.c  scabs1.c  scnrm2.c  sdot.c  sgemm.c  snrm2.c  (+24 more)
nvxs-1.0.2/CLAPACK/INSTALL/: Makefile  dlamchtst.c  dsecnd.c  lsametst.c  second.c  slamch.c  slamchtst.c  tstiee.c
nvxs-1.0.2/CLAPACK/SRC/: Makefile  cbdsqr.c  cgbbrd.c  cgbequ.c  cgbrfs.c  cgbsvx.c  cgbtf2.c  cgbtrf.c  cgebak.c  cgebal.c  cgecon.c  cgeesx.c  cgegs.c  cgegv.c  cgehrd.c  cgelq2.c  cgelsy.c  cgeql2.c  cgeqr2.c  cgeqrf.c  cgesc2.c  cgetc2.c  cgetf2.c  cgetri.c  cgges.c  cggevx.c  cggqrf.c  cggrqf.c  cggsvp.c  cgtcon.c  cgtsv.c  cgtsvx.c  cgttrs.c  chbev.c  chbevx.c  chbgv.c  chbgvx.c  checon.c  cheev.c  cheevx.c  (+448 more)
nvxs-1.0.2/CLAPACK/TESTING/: Makefile
nvxs-1.0.2/nv_core/: nv_core.h  nv_core_util.h
nvxs-1.0.2/nv_face/: nv_face.h  nv_face_analyze.c  nv_face_detect.c  nv_face_detect.h  nv_face_detect_internal.h  nv_face_feature.h
nvxs-1.0.2/nv_ip/: nv_euclidean_color.c  nv_gray.c  nv_integral.c  nv_ip.h  nv_ip_gray.h
nvxs-1.0.2/nv_ml/: nv_kmeans.c  nv_ml_kmeans.h
nvxs-1.0.2/nv_num/: nv_matrix.c  nv_num_cov.h  nv_num_eigen.h  nv_num_lapack.h  nv_num_matrix.h
nvxs/CLAPACK/: ._CLAPACK-revisions3.1.1.1.info  ._Makefile  ._README.install  Makefile  README.install
nvxs/CLAPACK/INSTALL/: LAPACK_version.c  dsecndtst.c  secondtst.c
nvxs/CLAPACK/SRC/: cgbcon.c  cgbsv.c  cgbtrs.c  cgebd2.c  cgebrd.c  cgeequ.c  cgees.c  cgeev.c  cgeevx.c  cgehd2.c  cgelqf.c  cgels.c  cgelsd.c  cgelss.c  cgelsx.c  cgeqlf.c  cgeqp3.c  cgeqpf.c  cgerfs.c  cgerq2.c  cgerqf.c  cgesdd.c  cgesv.c  cgesvd.c  cgesvx.c  cgetrf.c  cgetrs.c  cggbak.c  cggbal.c  cggesx.c  cggev.c  cggglm.c  cgghrd.c  cgglse.c  cggsvd.c  cgtrfs.c  cgttrf.c  cgtts2.c  chbevd.c  chbgst.c  (+464 more)
nvxs/nv_core/: nv_config.h  nv_core_matrix.c  nv_core_matrix.h  nv_core_util.c  nv_portable.h
nvxs/nv_face/: nv_face_analyze.h  nv_face_detect.c  nv_face_detect.h  nv_face_haarlike.c  nv_face_mlp_static.h
nvxs/nv_ip/: nv_gaussian5x5.c  nv_gray_cpu.c  nv_ip_euclidean_color.h  nv_ip_gaussian.h  nv_ip_integral.h  nv_ip_laplacian.h  nv_laplacian.c
nvxs/nv_ml/: nv_gaussian.c  nv_ml.h  nv_ml_gaussian.h  nv_ml_mlp.h  nv_mlp.c
nvxs/nv_num/: nv_cov.c  nv_distance.c  nv_eigen.c  nv_num.h  nv_num_distance.h  nv_num_vector.h  nv_vector.c
(+1035 files in other folders)
